# 13clase/mvc_api_crud/app/controllers/book_controller.py
@@ -1,12 +1,26 @@
 from flask import Blueprint, request, jsonify
 from models.book_model import Book
 from views.book_view import render_book_detail, render_book_list
+from flask_jwt_extended import verify_jwt_in_request, get_jwt_identity
+from functools import wraps
 
 #Crear un blueprint para el controlador
 book_bp = Blueprint("book", __name__)
 
+#Aplicando la autentificacion
+def jwt_required(fn):
+    @wraps(fn)
+    def wrapper(*args, **kwargs):
+        try:
+            verify_jwt_in_request()
+            return fn(*args, **kwargs)
+        except Exception as e:
+            return jsonify({"error": str(e)}), 401
+    return wrapper
+
 #Ruta para obtener la lista de libros
 @book_bp.route("/books", methods=["GET"])
+@jwt_required
 def get_books():
     books = Book.get_all()
     return jsonify(render_book_list(books))
@@ -14,6 +28,7 @@ def get_books():
 
 #Ruta para obtener un libro especifico por id 
 @book_bp.route("/books/<int:id>", methods=["GET"])
+@jwt_required
 def get_book(id):
     book = Book.get_by_id(id)
     if book:
@@ -22,6 +37,7 @@ def get_book(id):
 
 #Ruta para crear un nuevo libro y guardarlo en la base de datos
 @book_bp.route("/books", methods=["POST"])
+@jwt_required
 def create_book():
     data = request.json
     title = data.get("title")
@@ -40,6 +56,7 @@ def create_book():
 
 #Ruta para actualizar un libro existente
 @book_bp.route("/books/<int:id>", methods=["PUT"])
+@jwt_required
 def update_book(id):
     book = Book.get_by_id(id)
     if not book:
@@ -57,6 +74,7 @@ def update_book(id):
 
 #Ruta para eliminar un animal existente
 @book_bp.route("/books/<int:id>", methods=["DELETE"])
+@jwt_required
 def delete_animal(id):
     book = Book.get_by_id(id)
     if not book:
